# swagger.json
@@ -22,49 +22,6 @@
             "description": "OK"
           }
         }
-      },
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "firstName": {
-                  "example": "any"
-                },
-                "lastName": {
-                  "example": "any"
-                },
-                "age": {
-                  "example": "any"
-                },
-                "gender": {
-                  "example": "any"
-                },
-                "email": {
-                  "example": "any"
-                },
-                "major": {
-                  "example": "any"
-                },
-                "enrollmentYear": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
       }
     },
     "/api-docs": {
@@ -77,7 +34,7 @@
         }
       }
     },
-    "/any": {
+    "/items/any": {
       "get": {
         "description": "",
         "responses": {
@@ -90,7 +47,7 @@
         }
       }
     },
-    "/{id}": {
+    "/items/{id}": {
       "get": {
         "description": "",
         "parameters": [
@@ -197,7 +154,55 @@
         }
       }
     },
-    "/getAllGrade": {
+    "/items/": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "example": "any"
+                },
+                "lastName": {
+                  "example": "any"
+                },
+                "age": {
+                  "example": "any"
+                },
+                "gender": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "major": {
+                  "example": "any"
+                },
+                "enrollmentYear": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/grades/getAllGrade2": {
       "get": {
         "description": "",
         "responses": {
@@ -210,12 +215,12 @@
         }
       }
     },
-    "/{getSingleGradeid}": {
+    "/grades/getSingleGrade/{id}": {
       "get": {
         "description": "",
         "parameters": [
           {
-            "name": "getSingleGradeid",
+            "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
@@ -237,7 +242,7 @@
         }
       }
     },
-    "/createGrade": {
+    "/grades/createGrade": {
       "post": {
         "description": "",
         "parameters": [
@@ -270,12 +275,12 @@
         }
       }
     },
-    "/{updateGradeid}": {
+    "/grades/updateGrade/{id}": {
       "put": {
         "description": "",
         "parameters": [
           {
-            "name": "updateGradeid",
+            "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
@@ -315,12 +320,12 @@
         }
       }
     },
-    "/{deleteGradeid}": {
+    "/grades/deleteGrade/{id}": {
       "delete": {
         "description": "",
         "parameters": [
           {
-            "name": "deleteGradeid",
+            "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
